--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="container">
 			<div class="header__top">
 				<div class="logo">
-					<img src="icons/header/logo.png" alt="logo">
+					<a href="#"><img src="icons/header/logo.png" alt="logo"></a>
 				</div>
 				<nav class="header__nav">
 					<ul class="header__menu">
@@ -31,12 +31,52 @@
 						<li class="header__menu-item"><a href="#" class="header__menu-link">Контакты</a></li>
 					</ul>
 				</nav>
-				<div class="header__questions">
-					<div class="header__question">Есть вопросы?</div>
-					<a href="tel:79264230100" class="header__phone">+7 (926) 423 01 00</a>
+				<div class="header__callback">
+					<div class="header__callback-left">
+						<div class="header__question">Есть вопросы?</div>
+						<a href="tel:79264230100" class="header__phone">+7 (926) 423 01 00</a>
+					</div>
+					<button class="button">Перезвоните мне</button>
 				</div>
-				<button class="button">Перезвоните мне</button>
 			</div>
+			<div class="header__uptitle">Global Opt - логистика полного цикла из Китая в Россию</div>
+			<h1 class="header__title">ДОСТАВКА ГРУЗОВ ИЗ КИТАЯ</h1>
+			<div class="header__subtitle">В РОССИЮ И СНГ ВСЕМИ ВИДАМИ ТРАНСПОРТА</div>
+			<div class="header__divider"></div>
+
+			<div class="header__bot">
+				<div class="header__descr">
+					<div class="header__descr-item">
+						<img src="icons/header/big.png" alt="cargo">
+					</div>
+					<div class="header__descr-item">
+						<img src="icons/header/alone.png" alt="alone">
+					</div>
+					<div class="header__descr-item">
+						<img src="icons/header/dtod.png" alt="door-to-door">
+					</div>
+					<div class="header__descr-item">
+						<img src="icons/header/fast.png" alt="speed">
+					</div>
+				</div>
+				<div class="header__descr">
+					<div class="header__descr-item">
+						<div class="header__descr-text">Перевозка негабаритных и крупнотоннажных грузов</div>
+					</div>
+					<div class="header__descr-item">
+						<div class="header__descr-text">Самостоятельно декларируем и проводим таможенную очистку с
+							оптимизацией кодов и ставок</div>
+					</div>
+					<div class="header__descr-item">
+						<div class="header__descr-text">Осуществляем прямые поставки с заводов от двери до двери</div>
+					</div>
+					<div class="header__descr-item">
+						<div class="header__descr-text">Экспресс доставка 1-2 дня из Гуанчжоу в Москву от 25$/кг </div>
+					</div>
+				</div>
+			</div>
+			<button class="button button_lh57 button_center">Получить расчет</button>
+
 
 		</div>
 	</header>
