--- a/index.html
+++ b/index.html
@@ -80,7 +80,102 @@
 
 		</div>
 	</header>
-
+	<section class="advantages">
+		<div class="container">
+			<h2 class="title">Преимущества работы с GlobalOpt</h2>
+			<div class="advantages__wrapper">
+				<div class="advantages__section">
+					<div class="advantages__section-item">
+						<img src="icons/advantages/1.png" alt="">
+						<div class="advantages__descr">
+							<div class="advantages__descr-title">Офисы в Китае и России</div>
+							<div class="advantages__descr-text">
+								Офисы расположены в Москве, столице России. И в Гуанчжоу, мировом торговом мегаполисе
+								Китая.
+							</div>
+						</div>
+					</div>
+					<div class="advantages__section-item">
+						<img src="icons/advantages/2.png" alt="">
+						<div class="advantages__descr">
+							<div class="advantages__descr-title">Квалифицированные кадры </div>
+							<div class="advantages__descr-text">
+								Наши сотрудники имеют большой опыт в логистике с Китаем и в совершенстве владеют
+								китайским и
+								английским языками.
+							</div>
+						</div>
+					</div>
+					<div class="advantages__section-item">
+						<img src="icons/advantages/3.png" alt="">
+						<div class="advantages__descr">
+							<div class="advantages__descr-title">Собственный склад в Китае
+							</div>
+							<div class="advantages__descr-text">
+								Свой склад в Китае, позволяет собирать и проверять и упаковывать ваши товары, перед
+								отправкой.
+							</div>
+						</div>
+					</div>
+					<div class="advantages__section-item">
+						<img src="icons/advantages/5.png" alt="">
+						<div class="advantages__descr">
+							<div class="advantages__descr-title">Делаем оптовые поставки под ключ</div>
+							<div class="advantages__descr-text">
+								Берём на себя все заботы связанные с закупкой, проверкой на качество, логистикой и
+								растаможкой. От вас требуется лишь заполнить техническое задание, одобрить образцы
+								товаров и
+								после принять товар на своём складе!
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="advantages__section">
+					<div class="advantages__section-item">
+						<img src="icons/advantages/5.png" alt="">
+						<div class="advantages__descr">
+							<div class="advantages__descr-title">Декларируем груз с оптимизацией</div>
+							<div class="advantages__descr-text">
+								Идем на встречу своим клиентам и помогаем растаможить груз с оптимизацией кодов и
+								ставок.
+							</div>
+						</div>
+					</div>
+					<div class="advantages__section-item">
+						<img src="icons/advantages/6.png" alt="">
+						<div class="advantages__descr">
+							<div class="advantages__descr-title">Осуществляем поиск производителей </div>
+							<div class="advantages__descr-text">
+								Помогаем нашим клиентам найти интересующий вас товар или производителя в Китае.
+							</div>
+						</div>
+					</div>
+					<div class="advantages__section-item">
+						<img src="icons/advantages/7.png" alt="">
+						<div class="advantages__descr">
+							<div class="advantages__descr-title">Перевод денег в Китай </div>
+							<div class="advantages__descr-text">
+								Помогаем переводить и оплачивать товар в Китае на льготных условиях
+							</div>
+						</div>
+					</div>
+					<div class="advantages__section-item">
+						<img src="icons/advantages/8.png" alt="">
+						<div class="advantages__descr">
+							<div class="advantages__descr-title">Поездка на производство в Китай </div>
+							<div class="advantages__descr-text">
+								У нас большой опыт в бизнес поездках по Китаю. Мы с большой радостью и желанием
+								организуем
+								вам такую поездку в Китай под ключ. Сделаем визу, трансфер из аэропорта, забронируем
+								отель,
+								предоставим переводчика. Организуем поездку на производство. Шоп тур. Мебельный тур.
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
