--- a/index.html
+++ b/index.html
@@ -176,6 +176,36 @@
 			</div>
 		</div>
 	</section>
+	<section class="work">
+		<div class="container">
+			<h2 class="title">Наша работа - больше чем просто доставка</h2>
+			<div class="divider"></div>
+			<div class="work__text">Мы организуем перевозки из Китая - оперативно и надежно, с учетом особенностей груза
+				и ваших требований по срокам и бюджету.</div>
+			<div class="work__descr">
+				<div class="work__descr-item">
+					<div class="work__descr-img"><img src="images/save.jpg" alt="save"></div>
+					<div class="work__descr-title">Страховка груза</div>
+					<div class="work__descr-text">Все грузы, логистику которых осуществляет Global Opt, застрахованы. Мы
+						гарантируем полное возмещение стоимости груза в случаях, предусмотренных страхо- вым
+						соглашением. Все ваши тревоги наша компания берет на себя.</div>
+				</div>
+				<div class="work__descr-item">
+					<div class="work__descr-img"><img src="images/logistic.jpg" alt="logistic"></div>
+					<div class="work__descr-title">Логистика последней мили</div>
+					<div class="work__descr-text">Мы осуществляем доставку вашего груза до конкретного адреса. Привоз
+						согласовывается менед- жерами по телефону, предварительно за сутки и за час до доставки. Также
+						мы предоставляем услуги грузчи- ков по месту доставки груза.</div>
+				</div>
+				<div class="work__descr-item">
+					<div class="work__descr-img"><img src="images/see.jpg" alt="see"></div>
+					<div class="work__descr-title">Мы всегда смотрим вперед</div>
+					<div class="work__descr-text">Философия нашей компании, делать себя и своих партнеров по всему миру,
+						успешными и богатыми. Поэтому мы всегда открыты к диалогу о партнерстве и инвестициях. </div>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
