Styled section Agent

--- a/index.html
+++ b/index.html
@@ -206,6 +206,16 @@
 			</div>
 		</div>
 	</section>
+	<section class="agent">
+		<div class="container">
+			<div class="icon"><img src="icons/agent.png" alt="agent"></div>
+			<h2 class="title title_white">Агент в Китае</h2>
+			<div class="agent__text">
+				Русскоговорящие представители компании без труда найдут именно тот товар, который
+				будет отвечать Вашим запросам как по качеству, так и по цене.
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
