--- a/index.html
+++ b/index.html
@@ -216,6 +216,69 @@
 			</div>
 		</div>
 	</section>
+	<section class="prices">
+		<div class="container">
+			<h2 class="title">Цены на любой вариант доставки</h2>
+			<div class="divider"></div>
+			<div class="prices__text">
+				Перевозки грузов на дальние расстояния без каких-либо ограничений.
+				Любой груз доставим вовремя.
+			</div>
+			<div class="prices__wrapper">
+				<div class="prices__cards">
+					<div class="prices__cards-title">Доставка морем</div>
+					<div class="prices__cards-img"><img src="icons/price/sea.png" alt="sea"></div>
+					<div class="prices__cards-delivery">Доставка 35-50 дней</div>
+					<div class="prices__cards-price">от 0,3$ за 1 кг</div>
+					<div class="prices__cards-descr">
+						Морские перевозки грузов из Китая в Россию за 35 дней с прохождением таможни
+					</div>
+					<button class="button button_center">Подробнее</button>
+				</div>
+				<div class="prices__cards">
+					<div class="prices__cards-title">Ж/Д доставка</div>
+					<div class="prices__cards-img"><img src="icons/price/train.png" alt="train"></div>
+					<div class="prices__cards-delivery">Доставка 15-28 дней</div>
+					<div class="prices__cards-price">от 1$ за 1 кг</div>
+					<div class="prices__cards-descr">
+						ЖД перевозки грузов из Китая в Россию от 2 недель с прохождением таможни
+					</div>
+					<button class="button button_center">Подробнее</button>
+				</div>
+				<div class="prices__cards">
+					<div class="prices__cards-title">Автодоставка</div>
+					<div class="prices__cards-img"><img src="icons/price/auto.png" alt="auto"></div>
+					<div class="prices__cards-delivery">Доставка 12-20 дня</div>
+					<div class="prices__cards-price">от 1$ за 1 кг</div>
+					<div class="prices__cards-descr">
+						Автоперевозки грузов из Китая в Россию от 2 недель с прохождением таможни
+					</div>
+					<button class="button button_center">Подробнее</button>
+				</div>
+				<div class="prices__cards">
+					<div class="prices__cards-title">Авиа доставка</div>
+					<div class="prices__cards-img"><img src="icons/price/avia.png" alt="avia"></div>
+					<div class="prices__cards-delivery">Доставка 1-12 дней</div>
+					<div class="prices__cards-price">от 6$ за 1 кг</div>
+					<div class="prices__cards-descr">
+						Авиаперевозки грузов из Китая в Россию до 2 недель с прохождением таможни
+					</div>
+					<button class="button button_center">Подробнее</button>
+				</div>
+			</div>
+			<div class="prices__form-title">Заказать бесплатную консультацию</div>
+			<form class="prices__form" action="">
+				<div class="prices__form-icon"><img src="icons/price/consultation.png" alt="consultation"></div>
+				<div class="prices_form-inputs">
+					<input type="text" name="name" required placeholder="Ваше имя..." class="prices__form-name">
+					<input type="tel" name="phone" required placeholder="Ваш номер телефона..."
+						class="prices__form-tel">
+					<input type="email" name="mail" required placeholder="Ваш e-mail..." class="prices__form-mail">
+				</div>
+				<button class="button">Отправить заявку</button>
+			</form>
+		</div>
+	</section>
 </body>
 
 </html>
