Styled section Management

--- a/index.html
+++ b/index.html
@@ -279,6 +279,16 @@
 			</form>
 		</div>
 	</section>
+	<section class="management">
+		<div class="container">
+			<div class="icon"><img src="icons/manager.png" alt="manager"></div>
+			<h2 class="title title_white">Менеджеры компании</h2>
+			<div class="management__text">Подберут для Вас оптимальную схему грузоперевозки. Проведут контроль закупок,
+				организуют прямые
+				поставки от завода-изготовителя.</div>
+
+		</div>
+	</section>
 </body>
 
 </html>
