Styled section Scheme

--- a/index.html
+++ b/index.html
@@ -289,6 +289,55 @@
 
 		</div>
 	</section>
+	<section class="scheme">
+		<div class="container">
+			<div class="title">Схема работы с нами</div>
+			<div class="scheme__wrapper">
+				<div class="scheme__item">
+					<img src="icons/scheme/1.png" alt="application">
+					<div class="scheme__item-title">Заявка</div>
+					<div class="scheme__item-descr">Вы оставляете заявку на нашем сайте или звоните нам</div>
+				</div>
+				<div class="scheme__item">
+					<img src="icons/scheme/2.png" alt="analitics">
+					<div class="scheme__item-title">Аналитика доставки
+					</div>
+					<div class="scheme__item-descr">Мы просчитываем варианты доставки Вашего груза</div>
+				</div>
+				<div class="scheme__item">
+					<img src="icons/scheme/3.png" alt="contract">
+					<div class="scheme__item-title">Договор</div>
+					<div class="scheme__item-descr">Заключаем с Вами договор о поставке груза из Китая</div>
+				</div>
+				<div class="scheme__item">
+					<img src="icons/scheme/4.png" alt="delivery">
+					<div class="scheme__item-title">Доставка на наш склад
+					</div>
+					<div class="scheme__item-descr">Связываемся с Вашим поставщиком в Китае и договариваемся о доставке
+						груза на наш склад </div>
+				</div>
+				<div class="scheme__item">
+					<img src="icons/scheme/5.png" alt="check">
+					<div class="scheme__item-title">Проверка груза
+					</div>
+					<div class="scheme__item-descr">Мы проверяем, собираем и упаковываем перед отправкой Ваш груз на
+						своём складе</div>
+				</div>
+				<div class="scheme__item">
+					<img src="icons/scheme/6.png" alt="delivery">
+					<div class="scheme__item-title">Доставка груза
+					</div>
+					<div class="scheme__item-descr">Мы перевозим ваш груз до места назначения и производим таможенную
+						очистку</div>
+				</div>
+				<div class="scheme__item">
+					<img src="icons/scheme/7.png" alt="payment">
+					<div class="scheme__item-title">Оплата</div>
+					<div class="scheme__item-descr">Оплачиваете доставку груза при получении </div>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
