Started style section Reviews

--- a/index.html
+++ b/index.html
@@ -338,6 +338,51 @@
 			</div>
 		</div>
 	</section>
+	<section class="reviews">
+		<div class="container">
+			<div class="title">отзывы наших клиентов</div>
+			<div class="divider"></div>
+			<div class="reviews__text">Мы всегда стараемся помочь клиентам, что бы они обращались к нам снова</div>
+			<div class="reviews__slider">
+				<div class="reviews__slide">
+					<img src="images/review.png" alt="Photo">
+					<div class="reviews__slider-name">Анисимова Ольга</div>
+					<div class="reviews__slider-descr">
+						Хочу рассказать о компании Global Opt. Самое главное что меня радует,
+						это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от
+						расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся
+						услугами даной компании
+					</div>
+				</div>
+				<div class="reviews__slide">
+					<img src="images/review.png" alt="Photo">
+					<div class="reviews__slider-name">Анисимова Ольга</div>
+					<div class="reviews__slider-descr">
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi labore adipisci quisquam
+						beatae repellat eligendi incidunt ex quam quae maxime ipsa dicta atque enim id, iusto aspernatur
+						voluptatum! Reiciendis, quo.Pariatur id, odio tenetur voluptates voluptatibus veniam officiis
+						aut corporis ullam quaerat, neque, unde eius fuga optio. Ipsum placeat soluta recusandae
+						expedita quaerat omnis perspiciatis. Cupiditate illum exercitationem hic aliquam.
+					</div>
+				</div>
+				<div class="reviews__slide">
+					<img src="images/review.png" alt="Photo">
+					<div class="reviews__slider-name">Анисимова Ольга</div>
+					<div class="reviews__slider-descr">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nihil maiores ipsum sed unde
+						incidunt cupiditate assumenda architecto mollitia itaque quaerat, blanditiis adipisci ipsa dicta
+						repellendus quis deserunt ab molestiae.
+						Beatae vel magni repellendus totam, voluptas similique ea repellat rerum nulla ipsam, enim
+						deserunt nihil unde, magnam accusantium quis modi omnis vero. Nesciunt cum dolorem, sit aliquam
+						voluptates soluta dolorum!
+						Ab, accusantium dolore quae tempore non, officia facere quod voluptate eveniet ullam hic vero ad
+						quis similique. Soluta exercitationem repellendus minima velit tempora, dignissimos debitis
+						inventore necessitatibus quisquam culpa animi.
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
