Maked slider and styled section Question

--- a/index.html
+++ b/index.html
@@ -343,21 +343,21 @@
 			<div class="title">отзывы наших клиентов</div>
 			<div class="divider"></div>
 			<div class="reviews__text">Мы всегда стараемся помочь клиентам, что бы они обращались к нам снова</div>
-			<div class="reviews__slider">
-				<div class="reviews__slide">
+			<div class="slider">
+				<div class="slider__item">
 					<img src="images/review.png" alt="Photo">
-					<div class="reviews__slider-name">Анисимова Ольга</div>
-					<div class="reviews__slider-descr">
+					<div class="slider__item-name">Анисимова Ольга</div>
+					<div class="slider__item-descr">
 						Хочу рассказать о компании Global Opt. Самое главное что меня радует,
 						это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от
 						расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся
 						услугами даной компании
 					</div>
 				</div>
-				<div class="reviews__slide">
-					<img src="images/review.png" alt="Photo">
-					<div class="reviews__slider-name">Анисимова Ольга</div>
-					<div class="reviews__slider-descr">
+				<div class="slider__item">
+					<img src="images/review_2.png" alt="Photo">
+					<div class="slider__item-name">Ингубира Возняцкая</div>
+					<div class="slider__item-descr">
 						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi labore adipisci quisquam
 						beatae repellat eligendi incidunt ex quam quae maxime ipsa dicta atque enim id, iusto aspernatur
 						voluptatum! Reiciendis, quo.Pariatur id, odio tenetur voluptates voluptatibus veniam officiis
@@ -365,10 +365,10 @@
 						expedita quaerat omnis perspiciatis. Cupiditate illum exercitationem hic aliquam.
 					</div>
 				</div>
-				<div class="reviews__slide">
-					<img src="images/review.png" alt="Photo">
-					<div class="reviews__slider-name">Анисимова Ольга</div>
-					<div class="reviews__slider-descr">
+				<div class="slider__item">
+					<img src="images/review_3.png" alt="Photo">
+					<div class="slider__item-name">Герасимов Платон</div>
+					<div class="slider__item-descr">
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nihil maiores ipsum sed unde
 						incidunt cupiditate assumenda architecto mollitia itaque quaerat, blanditiis adipisci ipsa dicta
 						repellendus quis deserunt ab molestiae.
@@ -382,7 +382,29 @@
 				</div>
 			</div>
 		</div>
+
 	</section>
+	<section class="questions">
+		<div class="container">
+			<form action="" class="questions__form">
+				<div class="questions__form-top">
+					<div class="questions__form-title">Остались вопросы?</div>
+					<div class="questions__form-text">Напишите нам!</div>
+				</div>
+				<div class="questions__form-main">
+					<input type="text" placeholder="Ваше имя...">
+					<input type="tel" placeholder="Ваш номер телефона...">
+					<input type="email" placeholder="Ваш e-mail...">
+					<textarea name="message" id="message" placeholder="Сообщение..."></textarea>
+				</div>
+				<button class="button button_center">Отправить заявку</button>
+			</form>
+		</div>
+	</section>
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
