--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/style.min.css" />
 
-	<title> Global opt</title>
+	<title>Global opt</title>
 </head>
 
 <body>
@@ -31,10 +31,10 @@
 						<li class="header__menu-item"><a href="#" class="header__menu-link">Контакты</a></li>
 					</ul>
 				</nav>
-				<div class="header__callback">
-					<div class="header__callback-left">
-						<div class="header__question">Есть вопросы?</div>
-						<a href="tel:79264230100" class="header__phone">+7 (926) 423 01 00</a>
+				<div class="callback">
+					<div class="callback-left">
+						<div class="callback-question">Есть вопросы?</div>
+						<a href="tel:79264230100" class="callback-phone">+7 (926) 423 01 00</a>
 					</div>
 					<button class="button">Перезвоните мне</button>
 				</div>
@@ -392,15 +392,42 @@
 					<div class="questions__form-text">Напишите нам!</div>
 				</div>
 				<div class="questions__form-main">
-					<input type="text" placeholder="Ваше имя...">
-					<input type="tel" placeholder="Ваш номер телефона...">
-					<input type="email" placeholder="Ваш e-mail...">
-					<textarea name="message" id="message" placeholder="Сообщение..."></textarea>
+					<input required type="text" placeholder="Ваше имя...">
+					<input required type="tel" placeholder="Ваш номер телефона...">
+					<input required type="email" placeholder="Ваш e-mail...">
+					<textarea required name="message" id="message" placeholder="Сообщение..."></textarea>
 				</div>
 				<button class="button button_center">Отправить заявку</button>
 			</form>
 		</div>
 	</section>
+	<div class="map">
+		<iframe
+			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1122.8166776983833!2d37.62738016744916!3d55.747499195063526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54af8f4b2bb81%3A0x4ddbd95d7439813b!2z0KHQsNC00L7QstC90LjRh9C10YHQutCw0Y8g0YPQuy4sIDUsINC-0YTQuNGBIDQtNiwg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDExNTAzNQ!5e0!3m2!1sru!2sua!4v1610911226364!5m2!1sru!2sua"
+			allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+	</div>
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__top">
+				<div class="footer__logo">
+					<div class="logo"><a href="#"><img src="icons/header/logo.png" alt="logo"></a></div>
+					<div class="footer__name">Global Opt - Доставка грузов из Китая в Россию и СНГ</div>
+				</div>
+				<div class="callback">
+					<div class="callback-left">
+						<div class="callback-question">Есть вопросы?</div>
+						<a href="tel:79264230100" class="callback-phone">+7 (926) 423 01 00</a>
+					</div>
+					<button class="button">Перезвоните мне</button>
+				</div>
+			</div>
+			<div class="footer__divider"></div>
+			<div class="footer__bot">
+				<div class="footer__copy">&copy; 2021 Naumenko Maksym</div>
+				<a href="#" class="footer__policy">Политика конфидециальности</a>
+			</div>
+		</div>
+	</footer>
 	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="js/slick.min.js"></script>
